--- a/Awesome/Info.plist
+++ b/Awesome/Info.plist
@@ -45,7 +45,7 @@
 					<key>UISceneDelegateClassName</key>
 					<string>$(PRODUCT_MODULE_NAME).SceneDelegate</string>
 					<key>UISceneStoryboardFile</key>
-					<string>Login</string>
+					<string>Splash</string>
 				</dict>
 			</array>
 		</dict>
